[project]
name = "spark-variant-type-python-sample"
version = "0.1.0"
description = ""
authors = [
    {name = "YN"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ruff (>=0.9.1,<0.10.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
